--- a/www.nass.gov.ng/682bf2fca1a4d8707e0420247255cd5d46775f03.yml
+++ b/www.nass.gov.ng/682bf2fca1a4d8707e0420247255cd5d46775f03.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:14:46 GMT
+    - Thu, 16 Aug 2018 12:20:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=enW6mbqljABc3F7ulCELp3; path=/
+    - PHPSESSID=YOcYFFR3ACxU5r6DVh%2CcN1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:14:46 GMT
+recorded_at: Thu, 16 Aug 2018 12:20:56 GMT
