--- a/www.nass.gov.ng/dd0f99483051557e277f98b4a825665c27ed33d6.yml
+++ b/www.nass.gov.ng/dd0f99483051557e277f98b4a825665c27ed33d6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:17:52 GMT
+    - Thu, 16 Aug 2018 12:24:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aKBBj4s3Iqh%2C8lXt8lEjw1; path=/
+    - PHPSESSID=c2x1fcZjVOuexDNV3x27F1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:17:52 GMT
+recorded_at: Thu, 16 Aug 2018 12:24:29 GMT
