--- a/www.nass.gov.ng/62d5139bbef8c034d48ec5dd8c9d9f3548bab7e3.yml
+++ b/www.nass.gov.ng/62d5139bbef8c034d48ec5dd8c9d9f3548bab7e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:20:40 GMT
+    - Thu, 16 Aug 2018 12:27:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6dXp5bAODefH5Bt%2CzBz5E3; path=/
+    - PHPSESSID=K4wnd%2CExMYt7QVQOAWWno0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:20:40 GMT
+recorded_at: Thu, 16 Aug 2018 12:27:45 GMT
