--- a/www.nass.gov.ng/814144774172e86d057491ffd55cba0287c4307a.yml
+++ b/www.nass.gov.ng/814144774172e86d057491ffd55cba0287c4307a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:22:25 GMT
+    - Thu, 16 Aug 2018 12:30:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=isWSoeQsvwmV8%2CIgn%2Cvka3; path=/
+    - PHPSESSID=JUCnB4eoRgdJ7VT5mrbSO0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:22:25 GMT
+recorded_at: Thu, 16 Aug 2018 12:30:03 GMT
