--- a/www.nass.gov.ng/f02a1f50d452d1cccc572b8b1bf51ebcb08e663e.yml
+++ b/www.nass.gov.ng/f02a1f50d452d1cccc572b8b1bf51ebcb08e663e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:25:53 GMT
+    - Thu, 16 Aug 2018 12:34:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7J9%2CYT4jxc-DaZsZdPDCe3; path=/
+    - PHPSESSID=CVDVjsYNWhvlpjHL9qsXL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:25:53 GMT
+recorded_at: Thu, 16 Aug 2018 12:34:31 GMT
