--- a/www.nass.gov.ng/3c845c64c673e591735805e30c5b8d7145c235b6.yml
+++ b/www.nass.gov.ng/3c845c64c673e591735805e30c5b8d7145c235b6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:28:31 GMT
+    - Thu, 16 Aug 2018 12:38:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pAZ-jhjySUpmTmU%2C8zvWt0; path=/
+    - PHPSESSID=YfyOGhc8sBaRCuHtFm03S2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:28:31 GMT
+recorded_at: Thu, 16 Aug 2018 12:38:23 GMT
