--- a/www.nass.gov.ng/4212c5b79c6a32f139e80e1cdb7849b237cde473.yml
+++ b/www.nass.gov.ng/4212c5b79c6a32f139e80e1cdb7849b237cde473.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:36:25 GMT
+    - Thu, 16 Aug 2018 12:45:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VNjL1waqT7GhnkaUVg5Ku0; path=/
+    - PHPSESSID=WaTfaO%2CMpb3I-YWeIkmrj2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:36:25 GMT
+recorded_at: Thu, 16 Aug 2018 12:45:57 GMT
