--- a/www.nass.gov.ng/f780c703e2929dda6ecdeddb9443135252030344.yml
+++ b/www.nass.gov.ng/f780c703e2929dda6ecdeddb9443135252030344.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:41:23 GMT
+    - Thu, 16 Aug 2018 12:50:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ouu%2CyYm6xD1BT7MhySh5O1; path=/
+    - PHPSESSID=7oP0yh30nG4-pflEtCqRP0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:41:23 GMT
+recorded_at: Thu, 16 Aug 2018 12:50:26 GMT
