--- a/www.nass.gov.ng/c87dc53c6d47627e8026fb21c6b3dd1da0adf76c.yml
+++ b/www.nass.gov.ng/c87dc53c6d47627e8026fb21c6b3dd1da0adf76c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:45:07 GMT
+    - Thu, 16 Aug 2018 12:54:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ugcq5STDCRIj4K86TVM2Q1; path=/
+    - PHPSESSID=JjXbVxo86UVt7FEkcye%2Cj1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:45:08 GMT
+recorded_at: Thu, 16 Aug 2018 12:54:31 GMT
