--- a/www.nass.gov.ng/1d8e179eed94f7d7dab3d261dc58722a5d838cbc.yml
+++ b/www.nass.gov.ng/1d8e179eed94f7d7dab3d261dc58722a5d838cbc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:47:31 GMT
+    - Thu, 16 Aug 2018 12:56:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yKSq-xvDwhSex2SRAKFJ13; path=/
+    - PHPSESSID=8pOiPuY4kMIXx7l6Xx%2CmQ0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:47:32 GMT
+recorded_at: Thu, 16 Aug 2018 12:56:53 GMT
