--- a/www.nass.gov.ng/7b7925aaa39e4a0ec156fd44705a584bd491481e.yml
+++ b/www.nass.gov.ng/7b7925aaa39e4a0ec156fd44705a584bd491481e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 15:59:13 GMT
+    - Thu, 16 Aug 2018 13:09:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2ubMTI3K2T0lrjprNpyrb2; path=/
+    - PHPSESSID=Fh0C%2ChwuTPVbHsIfIqFx11; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 15:59:13 GMT
+recorded_at: Thu, 16 Aug 2018 13:09:41 GMT
