--- a/www.nass.gov.ng/1a29584d00978e549f90bfb42d0856bfa11e0a65.yml
+++ b/www.nass.gov.ng/1a29584d00978e549f90bfb42d0856bfa11e0a65.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:02:02 GMT
+    - Thu, 16 Aug 2018 13:13:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=O5esP50abAJq-HL5D4Ncq1; path=/
+    - PHPSESSID=6vuoWLb%2CVZrpN9h%2Cia2Gt0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:02:02 GMT
+recorded_at: Thu, 16 Aug 2018 13:13:43 GMT
