--- a/www.nass.gov.ng/54d41f615a3f530d636a65bfad2b8e3ac60941a7.yml
+++ b/www.nass.gov.ng/54d41f615a3f530d636a65bfad2b8e3ac60941a7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:04:35 GMT
+    - Thu, 16 Aug 2018 13:15:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MGcvJcrnTNNqQ-HyzkAI21; path=/
+    - PHPSESSID=zukwN5pP4V6c%2CLCChjut22; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:04:36 GMT
+recorded_at: Thu, 16 Aug 2018 13:16:00 GMT
