--- a/www.nass.gov.ng/887e5520b512b28957706de5b0cc8103ee45ba57.yml
+++ b/www.nass.gov.ng/887e5520b512b28957706de5b0cc8103ee45ba57.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:10:26 GMT
+    - Thu, 16 Aug 2018 13:24:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LjsICzP5vT1%2CMuDZ9NLbN2; path=/
+    - PHPSESSID=m6gRG78De6E3hYcYQhMTQ0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:10:26 GMT
+recorded_at: Thu, 16 Aug 2018 13:24:00 GMT
