--- a/www.nass.gov.ng/4bfcaa870c19115f2692147a61fcbdb8d038db1d.yml
+++ b/www.nass.gov.ng/4bfcaa870c19115f2692147a61fcbdb8d038db1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:12:33 GMT
+    - Thu, 16 Aug 2018 13:26:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zoYSW3Kcq%2C50HzYUBOQgh0; path=/
+    - PHPSESSID=YQPp2ff5HoN62qN5Yzb5t3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:12:33 GMT
+recorded_at: Thu, 16 Aug 2018 13:26:07 GMT
