--- a/www.nass.gov.ng/a5e900ce515b3fd4527b4a0038d74775474938e1.yml
+++ b/www.nass.gov.ng/a5e900ce515b3fd4527b4a0038d74775474938e1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:24:24 GMT
+    - Thu, 16 Aug 2018 13:39:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZpvxhHrg5MRt90AGzYryw2; path=/
+    - PHPSESSID=HkyV8U%2Cg2GrzYMSAe3MuU1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:24:24 GMT
+recorded_at: Thu, 16 Aug 2018 13:39:08 GMT
