--- a/www.nass.gov.ng/e8c8853bb750cd38cc6b84c3aaa8947ab9679a39.yml
+++ b/www.nass.gov.ng/e8c8853bb750cd38cc6b84c3aaa8947ab9679a39.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:35:56 GMT
+    - Thu, 16 Aug 2018 13:50:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=x8nDpM0wo4YHmLG9wQOfl3; path=/
+    - PHPSESSID=SPsBVapnkEc0nbi%2Cw7Xfk0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:35:57 GMT
+recorded_at: Thu, 16 Aug 2018 13:50:57 GMT
