--- a/www.nass.gov.ng/de5254844cf8d346a1878728cb84aa920a2f7e26.yml
+++ b/www.nass.gov.ng/de5254844cf8d346a1878728cb84aa920a2f7e26.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:41:47 GMT
+    - Thu, 16 Aug 2018 13:57:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zb%2CnwSQOjaVBqvgcbjUPD3; path=/
+    - PHPSESSID=pjCQpfq5hjooCo5MlrL8R0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:41:48 GMT
+recorded_at: Thu, 16 Aug 2018 13:57:49 GMT
