--- a/www.nass.gov.ng/fd4387087688ec4155d0de1e35565514cd127c2d.yml
+++ b/www.nass.gov.ng/fd4387087688ec4155d0de1e35565514cd127c2d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:44:26 GMT
+    - Thu, 16 Aug 2018 14:01:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sLtC%2CbGGObCHjthIygJGB3; path=/
+    - PHPSESSID=pZ5AbdrPTnOrIrYpjr4022; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:44:27 GMT
+recorded_at: Thu, 16 Aug 2018 14:01:15 GMT
