--- a/www.nass.gov.ng/4583a7bb0bea44179d736636faaa51b9d67274f2.yml
+++ b/www.nass.gov.ng/4583a7bb0bea44179d736636faaa51b9d67274f2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:52:01 GMT
+    - Thu, 16 Aug 2018 14:10:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mTkHSBa9ofFqDkDw6prvy3; path=/
+    - PHPSESSID=FcazaDRG3YZVv6L6%2CNL-g0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:52:01 GMT
+recorded_at: Thu, 16 Aug 2018 14:10:36 GMT
