--- a/www.nass.gov.ng/dd47063596feff410eee79a2daec741bc0677f3a.yml
+++ b/www.nass.gov.ng/dd47063596feff410eee79a2daec741bc0677f3a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 17:00:56 GMT
+    - Thu, 16 Aug 2018 14:18:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=X0yIojQLjZtcVfBF4Mvhk1; path=/
+    - PHPSESSID=xieM-fdz9hrX%2CTx9eN4N33; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 17:00:56 GMT
+recorded_at: Thu, 16 Aug 2018 14:18:24 GMT
