--- a/www.nass.gov.ng/f0abda3d5fbf7e2b60ec2a1ad53b2d379647e123.yml
+++ b/www.nass.gov.ng/f0abda3d5fbf7e2b60ec2a1ad53b2d379647e123.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 17:13:03 GMT
+    - Thu, 16 Aug 2018 14:29:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w68u1ezlfLd%2CDR2F4qj4R3; path=/
+    - PHPSESSID=BafOELPyas-o6FHrtL7su1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 17:13:04 GMT
+recorded_at: Thu, 16 Aug 2018 14:29:23 GMT
