--- a/www.nass.gov.ng/6f0954c8489964edc5aff4e5709e6f55bc32b5f8.yml
+++ b/www.nass.gov.ng/6f0954c8489964edc5aff4e5709e6f55bc32b5f8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 17:26:39 GMT
+    - Thu, 16 Aug 2018 14:38:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=o2EBLDgZ%2Ccnm9Cmi7sTu40; path=/
+    - PHPSESSID=TQ2RpMnY%2CjPXcMYdceY5W1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 17:26:42 GMT
+recorded_at: Thu, 16 Aug 2018 14:38:02 GMT
