--- a/www.nass.gov.ng/fb761bc827078936f7b2cc0fcb860c6825429ae6.yml
+++ b/www.nass.gov.ng/fb761bc827078936f7b2cc0fcb860c6825429ae6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 17:31:53 GMT
+    - Thu, 16 Aug 2018 14:43:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xi4li9LXgvySnFwVXRxSW2; path=/
+    - PHPSESSID=Wf%2CinEvjzDQaycsDlXh8S1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 17:31:53 GMT
+recorded_at: Thu, 16 Aug 2018 14:43:16 GMT
