--- a/www.nass.gov.ng/8ffa256484b64a8baf4c2881af85ca39510d02ac.yml
+++ b/www.nass.gov.ng/8ffa256484b64a8baf4c2881af85ca39510d02ac.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 17:34:00 GMT
+    - Thu, 16 Aug 2018 14:45:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EaSZ%2CVfrpad-2CzDtmMFc2; path=/
+    - PHPSESSID=UzHTZ6vKrbYZDZxUazil-3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 17:34:00 GMT
+recorded_at: Thu, 16 Aug 2018 14:45:03 GMT
