--- a/www.nass.gov.ng/ad0064bebad23a7029f4d696af52b0fa4af58788.yml
+++ b/www.nass.gov.ng/ad0064bebad23a7029f4d696af52b0fa4af58788.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 17:40:54 GMT
+    - Thu, 16 Aug 2018 14:53:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=a-Hdwdnd3zLPpA5T8Ay3o3; path=/
+    - PHPSESSID=Pzc%2CLr6AZz8Qyzv25NVGk1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 17:40:58 GMT
+recorded_at: Thu, 16 Aug 2018 14:53:56 GMT
