--- a/www.nass.gov.ng/6d28bd6854ab5ad64490a1e0d9dfa55e96cdee6e.yml
+++ b/www.nass.gov.ng/6d28bd6854ab5ad64490a1e0d9dfa55e96cdee6e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 17:57:50 GMT
+    - Thu, 16 Aug 2018 15:11:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E-H1KZI3Yat2ZzWHdC7xn3; path=/
+    - PHPSESSID=pytVE8A%2CQagL-gVWdNxZl0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 17:57:50 GMT
+recorded_at: Thu, 16 Aug 2018 15:11:55 GMT
