--- a/www.nass.gov.ng/764b1e47a3630c0e98c8218ebe3cb98249e67fff.yml
+++ b/www.nass.gov.ng/764b1e47a3630c0e98c8218ebe3cb98249e67fff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:03:45 GMT
+    - Thu, 16 Aug 2018 15:19:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4cTY3nAXC3vbBEpa4HGzL2; path=/
+    - PHPSESSID=pamq3naenPbH1qqUQHf%2CH0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:03:45 GMT
+recorded_at: Thu, 16 Aug 2018 15:19:11 GMT
