--- a/www.nass.gov.ng/45ea15b183122377b250716f682f7d84f8f895da.yml
+++ b/www.nass.gov.ng/45ea15b183122377b250716f682f7d84f8f895da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:29:54 GMT
+    - Thu, 16 Aug 2018 15:44:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=36oclMIPvMqpoZ0q-2KE91; path=/
+    - PHPSESSID=r9dFQC%2CdjMaJqhqvMcA6g1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:29:54 GMT
+recorded_at: Thu, 16 Aug 2018 15:44:54 GMT
