--- a/www.nass.gov.ng/7d080215149c59c3bded0e3e9006c4d4261603c9.yml
+++ b/www.nass.gov.ng/7d080215149c59c3bded0e3e9006c4d4261603c9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:32:39 GMT
+    - Thu, 16 Aug 2018 15:47:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=e7pZXD%2Cqbaxu65tWsXcsM1; path=/
+    - PHPSESSID=fEN0FMBpqeuBwd4QP27e72; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:32:40 GMT
+recorded_at: Thu, 16 Aug 2018 15:47:55 GMT
