--- a/www.nass.gov.ng/897dc2c71fc0c152a13e4a02f4ac9e209b853a21.yml
+++ b/www.nass.gov.ng/897dc2c71fc0c152a13e4a02f4ac9e209b853a21.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:33:53 GMT
+    - Thu, 16 Aug 2018 15:48:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Nz85rG1lG%2C8tm%2Ct5KPYtL2; path=/
+    - PHPSESSID=DB1npu%2Cf8o-stCAMsajIU3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:33:53 GMT
+recorded_at: Thu, 16 Aug 2018 15:48:44 GMT
