--- a/www.nass.gov.ng/df9bc00546c6b6b15e78562eeaceab57c609c06a.yml
+++ b/www.nass.gov.ng/df9bc00546c6b6b15e78562eeaceab57c609c06a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:38:22 GMT
+    - Thu, 16 Aug 2018 15:53:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=k%2CzdNW8HKVL2Y3YGbMmqh1; path=/
+    - PHPSESSID=%2CXb87lqlR-tREHajTDsPA3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:38:22 GMT
+recorded_at: Thu, 16 Aug 2018 15:53:24 GMT
